Fixed spacing between buttons company section

--- a/src/pages/sections/company/companySection.css
+++ b/src/pages/sections/company/companySection.css
@@ -11,8 +11,9 @@
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
-	height: 200px;
-	justify-content: space-around;
+    justify-content: flex-start;
+    gap: 50px;
+    margin-top: 30px;
 }
 .LinkContainer {
 	display: flex;
